# diploma

./: .editorconfig  .gitignore  .vale.ini  CMakeLists.txt  CMakePresets.json  latexindent.yaml  pkg.txt  readme.md
.github/workflows/: cmake.yml
cmake/: latexindent-config.cmake
cmake/recommended/: zathura-config.cmake
code/: download_from_grafana_panel.js  new_polaris_cfg.json
docker/: Dockerfile  readme.md
listings/: new_polaris_cfg.json  old_polaris_cfg.json
mermaid/: CMakeLists.txt  librespace.mmd  satnogs_data_flow.mmd
src/: 00_abstract.tex  01_intro.tex  01_satnogs.tex  02_polaris.tex  02_satnogs.tex  03_analysis.tex  04_analysis.tex  05_ending.tex  CMakeLists.txt  abstract.tex  analysis.tex  attachments.tex  bsu.cls  bsu_bib.sty  ending.tex  hyphenation.tex  intro.tex  main.bib  main.tex  polaris.tex  polaris_overview.tex  ref.tex  references.bib  satnogs.tex  satnogs_overview.tex  specifications.tex  task.tex
src/review/: bsu_review.cls  feedback.tex  review.tex
src/test-pres/: presentation.tex
